# presse

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
src/cli/: args.rs
src/pdf/: mod.rs  optimizer.rs
wix/: main.wxs
